--- a/index.html
+++ b/index.html
@@ -6,15 +6,165 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.0/css/hover-min.css" integrity="sha512-glciccPoOqr5mfDGmlJ3bpbvomZmFK+5dRARpt62nZnlKwaYZSfFpFIgUoD8ujqBw4TmPa/F3TX28OctJzoLfg==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Graffiti Pairs</title>
 </head>
 <body>
 
+    <!--This is for the game cards front and back-->
+    
+    <section class="mem-game">
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-1.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-1.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-2.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-2.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-3.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-3.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-4.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-4.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-5.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-5.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-6.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-6.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-7.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-7.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-8.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-8.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-9.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-9.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-10.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-10.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-11.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-11.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-12.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-12.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-13.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-13.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-14.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-14.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-15.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-15.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-16.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-16.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-17.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-17.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-18.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+        <div class="game-card">
+            <img class="card-back" src="assets/images/gp-card-18.jpg" alt="Graffiti picture">
+            <img class="card-front" src="assets/images/front-card.png" alt="">
+        </div>
+    </section>
 
 
 
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="assets/js/scripts.js"></script>
 </body>
 </html>
