--- a/index.html
+++ b/index.html
@@ -14,147 +14,147 @@
     <!--This is for the game cards front and back-->
     
     <section class="mem-game">
-        <div class="game-card">
+        <div class="game-card" data-card="card-1">
             <img class="card-back" src="assets/images/gp-card-1.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-1">
             <img class="card-back" src="assets/images/gp-card-1.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-2">
             <img class="card-back" src="assets/images/gp-card-2.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-2">
             <img class="card-back" src="assets/images/gp-card-2.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-3">
             <img class="card-back" src="assets/images/gp-card-3.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-3">
             <img class="card-back" src="assets/images/gp-card-3.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-4">
             <img class="card-back" src="assets/images/gp-card-4.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-4">
             <img class="card-back" src="assets/images/gp-card-4.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-5">
             <img class="card-back" src="assets/images/gp-card-5.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-5">
             <img class="card-back" src="assets/images/gp-card-5.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-6">
             <img class="card-back" src="assets/images/gp-card-6.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-6">
             <img class="card-back" src="assets/images/gp-card-6.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-7">
             <img class="card-back" src="assets/images/gp-card-7.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-7">
             <img class="card-back" src="assets/images/gp-card-7.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-8">
             <img class="card-back" src="assets/images/gp-card-8.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-8">
             <img class="card-back" src="assets/images/gp-card-8.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-9">
             <img class="card-back" src="assets/images/gp-card-9.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-9">
             <img class="card-back" src="assets/images/gp-card-9.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-10">
             <img class="card-back" src="assets/images/gp-card-10.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-10">
             <img class="card-back" src="assets/images/gp-card-10.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-11">
             <img class="card-back" src="assets/images/gp-card-11.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-11">
             <img class="card-back" src="assets/images/gp-card-11.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-12">
             <img class="card-back" src="assets/images/gp-card-12.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-12">
             <img class="card-back" src="assets/images/gp-card-12.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-13">
             <img class="card-back" src="assets/images/gp-card-13.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-13">
             <img class="card-back" src="assets/images/gp-card-13.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-14">
             <img class="card-back" src="assets/images/gp-card-14.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-14">
             <img class="card-back" src="assets/images/gp-card-14.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-15">
             <img class="card-back" src="assets/images/gp-card-15.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-15">
             <img class="card-back" src="assets/images/gp-card-15.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-16">
             <img class="card-back" src="assets/images/gp-card-16.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-16">
             <img class="card-back" src="assets/images/gp-card-16.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-17">
             <img class="card-back" src="assets/images/gp-card-17.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-17">
             <img class="card-back" src="assets/images/gp-card-17.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-18">
             <img class="card-back" src="assets/images/gp-card-18.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
-        <div class="game-card">
+        <div class="game-card" data-card="card-18">
             <img class="card-back" src="assets/images/gp-card-18.jpg" alt="Graffiti picture">
             <img class="card-front" src="assets/images/front-card.png" alt="">
         </div>
@@ -165,6 +165,6 @@
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/game.js"></script>
 </body>
 </html>
